@@ -4,6 +4,8 @@
 * Converted documentation from JSDoc to YUIDoc.
 * If an undefined value is in the input to arrayToCsv it will now be considered
   an empty field.
+* When reading CSV files unquoted numbers are treated as numbers even with
+  leading or trailing whitespace.
 1.1.0
 ---
 * Added support for use as a CommonJS module.  This enables using UCSV as a
